--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -8,14 +8,15 @@
   }
   
   .project h1 {
-    margin-top: 25vh;
     margin-bottom: 5vh;
     color: #3e497a;
     font-size: 35px;
   }
   .project img {
-    height: 40vh;
+    height: 40vw;
+    width: auto;
     border-radius: 10px;
+    /* max-width: 90vw; */
   }
   
   .project p {
@@ -32,5 +33,17 @@
   }
 
   .project .description {
-    font-size: 3vh;
+    font-size: 4vw;
+    margin-left: 3vw;
+    margin-right: 3vw;
+    margin-bottom: 1vh;
+  }
+
+  .project .skills {
+    margin-left: 3vw;
+    margin-right: 3vw;
+  }
+
+  .project .header { 
+    margin-top: 10px;
   }
