--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,15 +2,17 @@
     width: 100%;
     height: 100px;
     background: #21325e;
+    padding-bottom: 50px;
   }
   
   .links {
     width: 100%;
-    height: 100%;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
+    padding-top: 50px;
   }
 
   .link {
