--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,6 +1,5 @@
 .project {
     width: 100%;
-    /* height: calc(100vh - 100px); */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +15,6 @@
     height: 40vw;
     width: auto;
     border-radius: 10px;
-    /* max-width: 90vw; */
   }
   
   .project p {
@@ -48,4 +46,13 @@
 
   .project .header { 
     margin-top: 10px;
+  }
+
+  .project .additionalLink {
+    font-size: 2.5vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    margin-bottom: 1vh;
+    margin-top: 5vh;
+    color: #3e497a;
   }
