--- a/src/old/styles/Home.css
+++ b/src/old/styles/Home.css
@@ -2,7 +2,7 @@
     width: 100%;
     align-items: center;
     font-family: "Arial", sans-serif;
-    color: #929292;
+    color: #3e497a;
   }
   
   .about {
@@ -12,62 +12,59 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background: #f0f0f0;
-    padding-bottom: 2vh;
+    background-color: #21325e;
+    color: #f0f0f0;
+    padding-bottom: 15vh;
+  }
+  
+  .about .intro {
+    padding-bottom: 1vh;
   }
 
   .about h2 {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 10vh;
+    font-size: 5vw;
+    color: #e9d35b;
     height: 50px;
-    padding-bottom: 2vh;
   }
   
   .about .prompt {
-    width: 50%;
+    width: 40%;
     font-size: 30px;
+    /* margin-top: 10vh; */
   }
   .prompt svg {
     font-size: 60px;
     margin: 5px;
+    color: white;
   }
-  .prompt .buttons {
-    justify-content: center;
-    padding-bottom: 2vh;
-    display: flex;
-  }
-
-  .prompt .emails button{
-    color: #929292;
-  }
-
+  
   .skills {
     font-size: 35px;
     width: 100%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
   }
   
   .skills h1 {
-    font-size: 2em;
-    margin: 1vh;
+    color: #3e497a;
   }
   
   .skills .list {
-    font-size: 1em;
     list-style: none;
     width: 60%;
-    margin: auto;
   }
   
   .list span {
-    font-size: .5em;
+    font-size: 20px;
   }
 
   button {
     background: none;
     border: none;
+    color: white;
     font-size: large;
   }
 
@@ -76,7 +73,7 @@
     transform: scale(1.1);
   }
   
-  @media only screen and (max-width: 720px) {
+  @media only screen and (max-width: 600px) {
     .about h2 {
       font-size: 40px;
     }
@@ -93,11 +90,7 @@
     .list {
       padding: 0;
     }
-    
-    .skills h1 {
-      font-size: 40px;
-    }
-
+  
     .skills h2 {
       font-size: 30px;
     }
