--- a/src/old/styles/Navbar.css
+++ b/src/old/styles/Navbar.css
@@ -1,24 +1,31 @@
 .navbar {
     width: 100%;
     height: 100px;
-    background: #929292;
+    background: #21325e;
+    padding-bottom: 50px;
   }
   
   .links {
     width: 100%;
-    height: 100%;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    position: relative;
+    padding-top: 50px;
+  }
+
+  .link {
+    margin-right: 1vw;
+    margin-left: 1vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
   
   .navbar a {
     color: white;
     text-decoration: none;
-    margin-right: 25px;
-    margin-left: 25px;
+    margin: 10px;
     font-size: 25px;
   }
   
